[package]
name = "rustgate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
tokio = { version = "1", features = ["full"] }
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
jsonwebtoken = "9.3.1"
config = "0.15.11"
tower_governor = "0.7.0"
metrics-exporter-prometheus = "0.17.0"
tower = "0.5.2"


