[package]
name = "rustgate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
config = "0.15.11"
metrics-exporter-prometheus = "0.17.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }



